--- a/css/oldindex.css
+++ b/css/oldindex.css
@@ -24,7 +24,7 @@ h1 {
     padding: 0;
     margin: 0;
     background-color: hsla(200,50%,80%,1);
-    background-image: url('images/cloud_wallpaper.png');
+    background-image: url('/images/cloud_wallpaper.png');
     background-repeat: no-repeat;
     background-position: 0% 73%;
     background-size: cover;
