--- a/css/neodash.css
+++ b/css/neodash.css
@@ -5,6 +5,7 @@
 
 body {
     background: #d5adc5;
+    background-image: url('https://i.imgur.com/4X6y0AJ.png');
     font-size: 1em;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
