--- a/css/neodash.css
+++ b/css/neodash.css
@@ -4,8 +4,7 @@
 }
 
 body {
-    background: #d5adc5;
-    background-image: url('https://i.imgur.com/4X6y0AJ.png');
+    background: #d5adc5  url('https://i.imgur.com/4X6y0AJ.png') fixed;
     font-size: 1em;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
